--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "react-icons": "^5.2.1"
   }
 }
