--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1"
   }
 }
