--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1"
   }
 }
