--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nodemon": "^3.1.3",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "select-philippines-address": "^1.0.6",
+    "use-postal-ph": "^1.1.7"
   }
 }
