--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.6",
     "select-philippines-address": "^1.0.6",
     "use-postal-ph": "^1.1.7",
     "uuid": "^10.0.0"
