--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
