--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,20 +20,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.3",
-    "react-chartjs-2": "^5.2.0",
-    "react-csv": "^2.2.2",
-    "react-icons": "^5.2.1",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.25.1",
-    "select-philippines-address": "^1.0.6",
-    "use-postal-ph": "^1.1.7",
-    "uuid": "^10.0.0"
+    "nodemon": "^3.1.3"
   }
 }
