--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,5 @@
 services:
-  # Backend API Service
-  - type: web
-    name: hubisko-api
-    env: node
-    plan: free
-    buildCommand: cd api && npm install
-    startCommand: cd api && npm start
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: PORT
-        value: 10000
-    # Add your environment variables here
-    # - key: MONGODB_URI
-    #   fromDatabase:
-    #     name: your-database-name
-    #     property: connectionString
-
-  # Frontend Service
+  # Frontend Service (Static Site)
   - type: static
     name: hubisko-client
     env: static
@@ -34,3 +16,21 @@ services:
       - type: rewrite
         source: /*
         destination: /index.html
+
+  # Backend API Service  
+  - type: web
+    name: hubisko-api
+    env: node
+    plan: free
+    buildCommand: cd api && npm install
+    startCommand: cd api && npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: PORT
+        value: 10000
+    # Add your environment variables here
+    # - key: MONGODB_URI
+    #   fromDatabase:
+    #     name: your-database-name
+    #     property: connectionString
