--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "hubisko2",
   "version": "1.0.0",
-  "description": "HubIsko2 - Scholarship Management Platform",
+  "description": "",
   "type": "module",
-  "scripts": {
-    "install-all": "npm install --prefix api && npm install --prefix client",
-    "dev": "concurrently \"npm run dev --prefix api\" \"npm run dev --prefix client\"",
-    "build": "cd client && npm install && npm run build",
-    "start": "cd api && npm install && npm start",
-    "api:dev": "npm run dev --prefix api",
-    "api:start": "npm start --prefix api",
-    "client:dev": "npm run dev --prefix client",
-    "client:build": "npm run build --prefix client",
-    "client:preview": "npm run preview --prefix client"
+  "main": "index.js",  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "npm install"
   },
-  "keywords": ["scholarship", "management", "platform"],
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.3"
   }
 }
