--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,16 @@
 {
   "name": "hubisko2",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "index.js",  "scripts": {
+  "description": "",  "type": "module",
+  "main": "index.js",
+  "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build": "npm install"
+    "build": "npm install",
+    "vercel-build": "npm install"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
