--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies":   {
+  "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
+    "framer-motion": "^12.15.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "react": "^18.2.0",
